--- a/.github/workflows/wiki_sync.yml
+++ b/.github/workflows/wiki_sync.yml
@@ -44,6 +44,8 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: 'xson-lang/XSON.wiki'
+      - name: Print Actor
+        run: echo "${{ github.actor }} ${{ github.triggering_actor }}"
       - name: Get Wiki Commit Author
         id: get-author
         run: echo "AUTHOR=$(git log -1 --format="%an")" >> $GITHUB_OUTPUT
