--- a/.github/workflows/wiki_sync.yml
+++ b/.github/workflows/wiki_sync.yml
@@ -4,52 +4,23 @@ on:
   push:
     paths:
       - "docs/**"
+  workflow_dispatch:
   repository_dispatch:
     types: [docs]
-  gollum:
+
   
 env:
-    docs: $GITHUB_WORKSPACE/main/docs
-    wiki: $GITHUB_WORKSPACE/wiki
+    docs: ./main/docs
+    wiki: ./wiki
     #suffix: [github-actions-bot]
 
-jobs:
-  check-diff:
-    name: Check for changes
-    runs-on: ubuntu-latest
-    if: github.sender.login != 'github-actions[bot]'
-    outputs: 
-        DIFF: ${{ steps.diff-check.outputs.DIFF }}
-    steps:
-      - name: Print Sender (For Logging Purposes)
-        run: echo "${{ github.event.sender.login }}"
-      - name: Checkout Main Repo
-        uses: actions/checkout@v3
-        with:
-          path: main
-      - name: Checkout Wiki Repo
-        uses: actions/checkout@v3
-        with:
-          path: wiki
-          repository: ${{github.repository}}.wiki
-      - name: Check for Differences
-        id: diff-check
-        run: |
-          EOF=$(dd if=/dev/urandom bs=15 count=1 status=none | base64)
-          echo "DIFF<<$EOF" >> "$GITHUB_OUTPUT"
-          # The echo is here to put a newline so that github doesn't complain about a missing newline
-          diff -qr --exclude=.git "${{env.docs}}" "${{env.wiki}}" >> "$GITHUB_OUTPUT" && echo "" >> "$GITHUB_OUTPUT"
-          echo "$EOF" >> "$GITHUB_OUTPUT"
-      - name: Print Output
-        run: echo "${{steps.diff-check.outputs.DIFF}}"
-        
+
+jobs:   
   sync:
-    name: Sync Docs with Wiki
+    name: Sync Docs to Wiki
     runs-on: ubuntu-latest
-    needs: check-diff
     permissions:
       contents: write
-    if: needs.check-diff.outputs.DIFF != ''
     steps:
       - name: Checkout Main Repo
         uses: actions/checkout@v3
@@ -62,31 +33,20 @@ jobs:
           path: wiki
           repository: ${{github.repository}}.wiki
           #token: ${{env.token}}
-        # Go to source folder
-      - name: Set Wiki as Source Folder
-        if: github.event_name == 'gollum'
-        run: |
-          echo "SRC=${{env.wiki}}" >> $GITHUB_ENV
-          echo "DST=${{env.docs}}" >> $GITHUB_ENV
-      - name: Set Docs as Source Folder
-        if: github.event_name != 'gollum'
-        run: |
-          echo "SRC=${{env.docs}}" >> $GITHUB_ENV
-          echo "DST=${{env.wiki}}" >> $GITHUB_ENV
       - name: Get Commit Author
         id: get-author
-        working-directory: ${{env.SRC}}
+        working-directory: ${{env.docs}}
         run: echo "AUTHOR=$(git log -1 --format="%an")" >> $GITHUB_OUTPUT
       - name: Get Commit Email
         id: get-email
-        working-directory: ${{env.SRC}}
+        working-directory: ${{env.docs}}
         run: echo "EMAIL=$(git log -1 --format="%ae")" >> $GITHUB_OUTPUT
       - name: Print Commit Message
-        working-directory: ${{env.SRC}}
+        working-directory: ${{env.docs}}
         run: echo "$(git log -1 --format="%B")"
       - name: Get Commit Message
         id: get-message
-        working-directory: ${{env.SRC}}
+        working-directory: ${{env.docs}}
         run: |
           EOF=$(dd if=/dev/urandom bs=15 count=1 status=none | base64)
           echo "MESSAGE<<$EOF" >> "$GITHUB_OUTPUT"
@@ -94,7 +54,7 @@ jobs:
           echo "$EOF" >> "$GITHUB_OUTPUT"
       - name: Get Source Commit Subject
         id: get-src-sub
-        working-directory: ${{env.SRC}}
+        working-directory: ${{env.docs}}
         run: |
           EOF=$(dd if=/dev/urandom bs=15 count=1 status=none | base64)
           echo "SUB<<$EOF" >> "$GITHUB_OUTPUT"
@@ -102,28 +62,34 @@ jobs:
           echo "$EOF" >> "$GITHUB_OUTPUT"
       - name: Get Destination Commit Subject
         id: get-dst-sub
-        working-directory: ${{env.DST}}
+        working-directory: ${{env.wiki}}
         run: |
           EOF=$(dd if=/dev/urandom bs=15 count=1 status=none | base64)
           echo "SUB<<$EOF" >> "$GITHUB_OUTPUT"
           git log -1 --format="%s" >> "$GITHUB_OUTPUT"
           echo "$EOF" >> "$GITHUB_OUTPUT"
-      - name: Copy Source Files to Destination
+      - name: Preprocess and Refactor Files
+        working-directory: ${{env.docs}}
         run: |
-          rsync -avzr --delete --exclude='.git/' "${{env.SRC}}/" "${{env.DST}}/"
+          chmod +x ../.github/actions/wiki_sync/refactor.sh
+          ../.github/actions/wiki_sync/refactor.sh
+        shell: bash
+      - name: Copy Doc Files to Wiki
+        run: |
+          rsync -avzr --delete --exclude='.git/' "${{env.docs}}/" "${{env.wiki}}/"
       - name: Push
-        working-directory: ${{env.DST}}
+        working-directory: ${{env.wiki}}
         run: |
-          export GIT_AUTHOR_NAME="github-actions[bot]"
-          export GIT_AUTHOR_EMAIL="41898282+github-actions[bot]@users.noreply.github.com"
-          export GIT_COMMITTER_NAME="${{ steps.get-author.outputs.AUTHOR }}"
-          export GIT_COMMITTER_EMAIL="${{ steps.get-email.outputs.EMAIL }}"
-          #export GIT_AUTHOR_NAME="${{ steps.get-author.outputs.AUTHOR }}"
-          #export GIT_AUTHOR_EMAIL="${{ steps.get-email.outputs.EMAIL }}"
-          #export GIT_COMMITTER_NAME="github-actions[bot]"
-          #export GIT_COMMITTER_EMAIL="41898282+github-actions[bot]@users.noreply.github.com"
+          #export GIT_AUTHOR_NAME="github-actions[bot]"
+          #export GIT_AUTHOR_EMAIL="41898282+github-actions[bot]@users.noreply.github.com"
+          #export GIT_COMMITTER_NAME="${{ steps.get-author.outputs.AUTHOR }}"
+          #export GIT_COMMITTER_EMAIL="${{ steps.get-email.outputs.EMAIL }}"
+          export GIT_AUTHOR_NAME="${{ steps.get-author.outputs.AUTHOR }}"
+          export GIT_AUTHOR_EMAIL="${{ steps.get-email.outputs.EMAIL }}"
+          export GIT_COMMITTER_NAME="github-actions[bot]"
+          export GIT_COMMITTER_EMAIL="41898282+github-actions[bot]@users.noreply.github.com"
           git add .
-          if [ "${{ steps.get-src-sub.outputs.SUB }}" = ${{ steps.get-dst-sub.outputs.SUB }}]; then
+          if [ "${{ steps.get-src-sub.outputs.SUB }}" = "${{ steps.get-dst-sub.outputs.SUB }}"]; then
             git commit --amend --no-edit
             git push --force-with-lease
           else
